Fixed overflow bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,3 +35,8 @@ body{
 .custom-dialog-container .mat-dialog-container {
     padding: 0px;
 }
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
